sovled leetcode problem 417 refering discuss - think of start line the other way round - do not need to process state at once